fixed z-index on nextrequest header.

--- a/postcode/static/css/custom.css
+++ b/postcode/static/css/custom.css
@@ -610,6 +610,7 @@ padding: .25em .6em;
   color: #fff;
   padding: 0px;
   text-align: center;
+  z-index: 1;
 }
 
 .nr-banner p {
